[gd_scene load_steps=3 format=3 uid="uid://bd406idkha21c"]

[ext_resource type="Script" path="res://Scripts/menu_system.gd" id="1_uy7x6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_123cn"]
bg_color = Color(0.226707, 0.226708, 0.226707, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MenuSystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uy7x6")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 50.0
offset_right = 800.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 36
text = "Dale's 20 Game Challenge!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Game1Button" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 16
text = "Game 1
Pong!"

[node name="Game2Button" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 16
text = "Game 2
Breakout!"

[node name="Game3Button" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 16
text = "Game 3
River Run!"

[node name="Game4Button" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 16
text = "Game 4
Asteroids!"

[node name="Game5Button" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 16
text = "Game 5
Pacman!"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="Game6Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 16
text = "Game 6
Pitfall!"

[node name="Game7Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 16
text = "Game 7
Tanks!"

[node name="Game8Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 16
text = "Game 8
Tie Fox!"

[node name="Game9Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 16
text = "Game 9
Kart!"

[node name="Game10Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 16
text = "Game 10
DaleCraft!"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_top = 550.0
offset_right = 800.0
offset_bottom = 590.0
alignment = 1

[node name="ExitButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Exit to Desktop"

[node name="DaleCraftMessage" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_123cn")

[node name="MarginContainer" type="MarginContainer" parent="DaleCraftMessage"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="DaleCraftMessage/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="DaleCraftMessage/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "DaleCraft is extremely unstable in the Web browser.
It will probably cause issues or crash your browser.

I have also provided a Windows download of my
20 Game Challenge as well on my itch.io.

Thanks
Dale
"

[node name="Continue" type="Button" parent="DaleCraftMessage/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Contine"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Game1Button" to="." method="_on_game_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Game2Button" to="." method="_on_game_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Game3Button" to="." method="_on_game_3_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Game4Button" to="." method="_on_game_4_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Game5Button" to="." method="_on_game_5_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Game6Button" to="." method="_on_game_6_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Game7Button" to="." method="_on_game_7_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Game8Button" to="." method="_on_game_8_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Game9Button" to="." method="_on_game_9_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Game10Button" to="." method="_on_game_10_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="DaleCraftMessage/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
